@@ -12,6 +12,7 @@ CHANGELOG Roundcube Webmail
 - Fix performance of rcube_db_mysql::get_variable()
 - Fix missing or not up-to-date CATEGORIES entry in vCard export (#1490277)
 - Fix fatal errors on systems without mbstring extension or mb_regex_encoding() function (#1490280)
+- Fix cursor position on reply belowe the quote in HTML mode (#1490263)
 
 RELEASE 1.1.0
 -------------
